fix drop bird + game over

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <script src="bg.js"></script>
     <script src="column.js"></script>
     <script src="ground.js"></script>
+    <script src="score.js"></script>
+    <script src="gameOver.js"></script>
     <script src="game.js"></script>
 </body>
 </html>
